# Markdown

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  lint-output.json  lint-summary.txt  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: index.ts
src/components/Editor/: CloseTabConfirm.tsx  ContextMenu.tsx  EditorContainer.tsx  EmojiPicker.tsx  PaneContainer.tsx  PaneWelcome.tsx  README.md  ReplaceDialog.tsx  VditorEditor.tsx  index.ts  vditor-styles.css  vditor-toolbar.ts  vditor-utils.ts
src/components/Layout/: Layout.tsx
src/components/Notebook/: ChatPanel.tsx  GeneratePanel.tsx  LLMConfigPanel.tsx  NotebookPanel.tsx  SourcesPanel.tsx  index.ts
src/components/QuickOpen/: QuickOpen.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/Tabs/: TabBar.tsx  (+1 more)
src/constants/: emojiData.ts
src/hooks/: useAutoSave.ts  useFileChangeDetection.ts  useFileOperations.ts  useImagePaste.ts  useSplitShortcuts.ts  useTheme.ts
src/stores/: editorStore.ts  fileStore.ts  index.ts  notebookStore.ts  recentFilesStore.ts  settingsStore.ts  splitStore.ts  updateStore.ts
src/styles/: embed.css  globals.css  notebook.css  split.css
src/types/: global.d.ts  vditor.d.ts
src/utils/: embedProcessor.ts  embedUtils.ts  fileUtils.ts  linkUtils.ts  markdownUtils.ts  platform.ts  updateChecker.ts
(+9 files in other folders)
